Name:           multimap
Version:        1.3
Synopsis:       Different implementations of MultiMap
Description:    Different implementations of MultiMap. "Data.BagMultiMap" allows duplicate values under the same key, "Data.SetMultiMap" does not.
License:        MIT
License-File:   LICENSE
Author:         Julian Fleischer <julian.fleischer@fu-berlin.de>
Maintainer:     Julian Fleischer <julian.fleischer@fu-berlin.de>
Build-Type:     Simple
Cabal-Version:  >= 1.10
Category:       Data Structures
Stability:      provisional
Homepage:       http://hub.darcs.net/scravy/multimap

Source-Repository head
    type: git
    location: https://github.com/scravy/multimap.git

Library
    Exposed-Modules:    Data.BagMultiMap, 
                        Data.SetMultiMap
    Build-Depends:      base >= 3 && < 5,
                        containers >= 0.5
    Hs-Source-Dirs:     src
    default-language:   Haskell2010
    default-extensions: DeriveDataTypeable
    ghc-options:        -Wall -fno-warn-name-shadowing


